# ai-teacher-assistant

./: .gitignore  EMAIL_WORKFLOW_STANDARD.md  EMAIL_WORKFLOW_UPDATE_SUMMARY.md  LICENSE  Procfile  README.md  app.py  changes.txt  client.py  lesson_plan.md  main.py  pyproject.toml  requirements.txt  schema.sql  test.csv  test_forms.py  todo.txt
agents/: assessment_agent.py  autogen_agents.py  autogen_manager.py  email_agent.py  lesson_plan_agent.py  orchestra.py  timetable_agent.py
core/: ai_client.py  config.py  google_client.py  logger.py  md_render.py  pdf_tool.py
database/: migration_use_isolation.sql  rpc.sq;  rpc_helper.sql  schema.sql
integrations/: calendar_create.py  calendar_orchestrator.py  calendar_tool.py  email_writer.py  example.py  form_creator.py  form_render.py  form_response.py  form_utils.py  forms_fetch.py  gmail_tool.py
notebooks/: agents_tests.ipynb  autogen_sanity.ipynb  google_calendar_test.ipynb  model_test.ipynb  orchestra_test.ipynb  orchestrator_tests.ipynb  timetable_agent_test.ipynb
routes/: __init__.py  assessment_routes.py  assessments.py  auth_routes.py  batch_routes.py  email_routes.py  lesson_plan_routes.py  lessons.py  main_routes.py  pages.py  temp.py  timetable_routes.py
static/: students.csv
templates/: 404.html  activity.html  assessment_detail.html  assessments.html  assessments_list.html  auth_callback.html  base.html  batch_students.html  chat.html  course_batches.html  email.html  index.html  lesson_generator.html  lesson_plans_list.html  login.html  upload.html
test/: google_calendar_test.py
utils/: db.py  (+5 more)
(+15 files in other folders)
